--- a/package.json
+++ b/package.json
@@ -12,6 +12,16 @@
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.4",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
+    "eslint": "7.12.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "5.0.0",
+    "prettier": "^2.3.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.4"
   }
